@@ -24,7 +24,8 @@
         "nette/finder": "^2.4",
         "nette/neon": "^2.4",
         "nette/utils": "^2.4",
-        "nette/command-line": "^1.1"
+        "nette/command-line": "^1.1",
+        "symfony/options-resolver": "^3.3"
     },
     "require-dev": {
         "nexendrie/code-quality": "dev-master"
