@@ -1,5 +1,6 @@
 Version 0.2.0+dev
 - raised minimal version of PHP to 7.1
+- added dependency on symfony/options-resolver
 
 Version 0.2.0
 - raised minimal version of PHP to 7
